<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.gwenn</groupId>
  <artifactId>sqlite-javacpp</artifactId>
  <packaging>jar</packaging>
  <version>0.2.0</version>
  <name>SQLite JavaCPP binding</name>
  <description>JDBC Driver for SQLite using JavaCPP</description>
  <url>https://github.com/gwenn/sqlite-jna</url>

  <licenses>
    <license>
      <name>Public domain</name>
      <url>http://unlicense.org/</url>
      <distribution>manual</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>github</system>
    <url>https://github.com/gwenn/sqlite-jna/issues</url>
  </issueManagement>

  <scm>
    <connection>scm:git:https://github.com/gwenn/sqlite-jna.git</connection>
    <developerConnection>scm:git:git@github.com:gwenn/sqlite-jna.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/gwenn/sqlite-jna</url>
  </scm>

  <ciManagement>
    <system>github</system>
    <url>https://github.com/gwenn/sqlite-jna/actions</url>
  </ciManagement>

  <properties>
    <java.version>1.8</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <javacpp.parser.skip>true</javacpp.parser.skip>
    <javacpp.compiler.skip>false</javacpp.compiler.skip>
    <javacpp.deleteJniFiles>false</javacpp.deleteJniFiles>
    <!-- -Djavacpp.platform=windows-x86_64-mingw -->
    <javacpp.platform>${os.name}-${os.arch}</javacpp.platform>
    <javacpp.platform.root></javacpp.platform.root>
    <javacpp.platform.compiler></javacpp.platform.compiler>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>javacpp</artifactId>
      <version>1.5.8</version>
    </dependency>
    <dependency>
      <groupId>com.github.gwenn</groupId>
      <artifactId>sqlite-parser</artifactId>
      <version>0.1.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.errorprone</groupId>
      <artifactId>error_prone_annotations</artifactId>
      <version>2.14.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <!-- Prevent JavaDoc warnings from failing the build under Java 8... -->
      <id>doclint-java8-disable</id>
      <activation>
        <jdk>[1.8,)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.4.1</version>
            <configuration>
              <doclint>none</doclint>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <!-- https://central.sonatype.org/pages/apache-maven.html#distribution-management-and-authentication -->
      <id>ossrh</id>

      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>

      <distributionManagement>
        <snapshotRepository>
          <id>ossrh</id>
          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
          <id>ossrh</id>
          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
      </distributionManagement>

      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.4.1</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.0.1</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-deploy-plugin</artifactId>
            <version>3.0.0</version>
          </plugin>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.13</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>true</autoReleaseAfterClose>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>linux</id>
      <activation>
        <os>
          <name>linux</name>
        </os>
      </activation>
      <properties>
        <os.name>linux</os.name>
      </properties>
    </profile>
    <profile>
      <id>macosx</id>
      <activation>
        <os>
          <name>mac os x</name>
        </os>
      </activation>
      <properties>
        <os.name>macosx</os.name>
      </properties>
    </profile>
    <profile>
      <id>windows</id>
      <activation>
        <os>
          <family>windows</family>
        </os>
      </activation>
      <properties>
        <os.name>windows</os.name>
      </properties>
    </profile>
    <profile>
      <id>i386</id>
      <activation>
        <os>
          <arch>i386</arch>
        </os>
      </activation>
      <properties>
        <os.arch>x86</os.arch>
      </properties>
    </profile>
    <profile>
      <id>i486</id>
      <activation>
        <os>
          <arch>i486</arch>
        </os>
      </activation>
      <properties>
        <os.arch>x86</os.arch>
      </properties>
    </profile>
    <profile>
      <id>i586</id>
      <activation>
        <os>
          <arch>i586</arch>
        </os>
      </activation>
      <properties>
        <os.arch>x86</os.arch>
      </properties>
    </profile>
    <profile>
      <id>i686</id>
      <activation>
        <os>
          <arch>i686</arch>
        </os>
      </activation>
      <properties>
        <os.arch>x86</os.arch>
      </properties>
    </profile>
    <profile>
      <id>amd64</id>
      <activation>
        <os>
          <arch>amd64</arch>
        </os>
      </activation>
      <properties>
        <os.arch>x86_64</os.arch>
      </properties>
    </profile>
    <profile>
      <id>x86-64</id>
      <activation>
        <os>
          <arch>x86-64</arch>
        </os>
      </activation>
      <properties>
        <os.arch>x86_64</os.arch>
      </properties>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.bytedeco</groupId>
        <artifactId>javacpp</artifactId>
        <version>1.5.8</version>
        <configuration>
          <properties>${javacpp.platform}</properties>
          <propertyKeysAndValues>
            <property>
              <name>platform.root</name>
              <value>${javacpp.platform.root}</value>
            </property>
            <property>
              <name>platform.compiler</name>
              <value>${javacpp.platform.compiler}</value>
            </property>
          </propertyKeysAndValues>
          <classPath>${project.build.outputDirectory}</classPath>
          <includePath>/usr/include/</includePath>
          <linkPath>/usr/lib/</linkPath>
          <!--preloadPath>${basedir}/cppbuild/${javacpp.platform}/bin/</preloadPath-->
        </configuration>
        <executions>
          <execution>
            <id>generate-sources</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>build</goal>
            </goals>
            <configuration>
              <skip>${javacpp.parser.skip}</skip>
              <outputDirectory>${project.build.sourceDirectory}</outputDirectory>
              <!--classOrPackageName>org.bytedeco.javacpp.presets.*</classOrPackageName-->
            </configuration>
          </execution>
          <execution>
            <id>process-classes</id>
            <phase>process-classes</phase>
            <goals>
              <goal>build</goal>
            </goals>
            <configuration>
              <skip>${javacpp.compiler.skip}</skip>
              <classOrPackageName>org.sqlite.SQLite</classOrPackageName>
              <copyLibs>true</copyLibs>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <useIncrementalCompilation>false</useIncrementalCompilation>
          <compilerArgs>
            <arg>-Xplugin:Manifold</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>systems.manifold</groupId>
              <artifactId>manifold-preprocessor</artifactId>
              <version>2022.1.31</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M7</version>
        <configuration>
          <enableAssertions>true</enableAssertions>
          <disableXmlReport>true</disableXmlReport>
          <redirectTestOutputToFile>true</redirectTestOutputToFile>
          <trimStackTrace>true</trimStackTrace>
          <!--argLine>-Xcheck:jni</argLine-->
          <additionalClasspathElements>
            <additionalClasspathElement>${project.basedir}/sqlite-autoconf-${env.SQLITEVERSION}/lib</additionalClasspathElement>
          </additionalClasspathElements>
        </configuration>
      </plugin>
      <!--  mvn package shade:shade -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.4.1</version>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.4.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.4.1</version>
      </plugin>
    </plugins>
  </reporting>

  <developers>
    <developer>
      <id>gwenn</id>
      <url>https://github.com/gwenn</url>
      <roles>
        <role>owner</role>
      </roles>
    </developer>
  </developers>
</project>
